# turnoplus

./: .gitignore  AGENTS.md  README.md  render.yaml
backend/: .env.example  TESTING.md  alembic.ini  check_appointments.py  create_sample_accounts.py  create_test_appointment.py  deployment-plan.md  fix_admin_roles.py  fix_existing_appointments.py  fix_sample_accounts.py  production-updates.md  pyproject.toml  pytest.ini  requirements.txt  sample_accounts.txt  seed_example_users.py  test_auth_debug.py  test_auth_role_validation.py  test_complete_fix.py  test_debug.py  test_delete_api.py  test_delete_prevention.py  test_doctor_deletion.py  test_existing_availability.py
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 4b5f5b6c0c1c_add_document_fields_to_patients.py  c8d8decece9a_add_obra_social_fields.py
backend/scripts/: migrate.py  run_use_case_flows.py  write_aiven_ca.py
backend/src/app/: main.py
backend/src/app/api/: v1.py
backend/src/app/controllers/: admins.py  appointments.py  doctors.py  offices.py  patients.py  users.py
backend/src/app/db/: __init__.py  broker.py  settings.py
backend/src/app/models/: patient.py
backend/src/app/schemas/: admin_dashboard.py  appointment.py  (+2 more)
backend/tests/: conftest.py  test_appointment_cancellation.py  test_appointments_flow.py  test_auth_roles.py  test_availability_timezone.py  test_patients_service.py
backend/tests/manual/: README.md  test_appointment_fix.py  test_block_deletion.py  test_booked_block_visibility.py  test_full_booking_flow.py  test_patient_registration.py  test_simple_booking.py
(+165 files in other folders)
